--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ cache:
 
 before_script:
   - python -V               # Print out python version for debugging
+  - python -m pip install --upgrade pip
   - python -m venv venv
   - source venv/bin/activate
   - pip install -r requirements.txt
