Seems like the pipeline uses the wrong pip

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,12 +18,12 @@ cache:
     - venv/
 
 before_script:
-  - python -V               # Print out python version for debugging
+  - python -V
   - python -m pip install --upgrade pip
   - python -m venv venv
   - source venv/bin/activate
-  - pip install -r requirements.txt
-  - pip install pdoc3 # pytest pytest-cov pytest-html
+  - python -m pip install -r requirements.txt
+  - python -m pip install pdoc3 # pytest pytest-cov pytest-html
 
 pages:
   script:
