--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,12 +25,12 @@ stages:
 before_script:
   - apt update && apt upgrade -y && apt install -y libgl1 # Needed for PyQT5
   - python -m venv venv && source venv/bin/activate && python --version
-  - pip install --upgrade pip && pip install -r requirements.txt && pip install pdoc3 pytest # hypothesis
+  - pip install --upgrade pip && pip install -r requirements.txt && pip install pdoc3 pytest hypothesis
 
 pytest:
   stage: test
   script:
-    python -m pytest -s -v
+    python -m pytest -s -v --hypothesis-show-statistics
   only:
     - master
     - 01-pipeline-creation # TODO: remove me once the merge is done
