--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ stages:
 before_script:
   - apt update && apt upgrade -y && apt install -y libgl1 # Needed for PyQT5
   - python -m venv venv && source venv/bin/activate && python --version
-  - pip install --upgrade pip && pip install -r requirements.txt && pip install pdoc3 pytest hypothesis flake8
+  - pip install --upgrade pip && pip install -r requirements.txt
+  - pip install pdoc3 pytest hypothesis flake8 flake8-bugbear pep8-naming flake8-builtins flake8-comprehensions mypy
 
 # We decide to not comply with PEP 8 on the following standards:
 #
@@ -36,7 +37,15 @@ before_script:
 flake8:
   stage: static-analysis
   script: # TODO: remove exit-zero once merge is done
-    flake8 --count --statistics --max-line-length=120 --exit-zero curvepy
+    flake8 --version && flake8 --count --statistics --max-line-length=120 --exit-zero curvepy
+  only:
+    - master
+    - 01-pipeline-creation # TODO: remove me once the merge is done
+
+mypy:
+  stage: static-analysis
+  script:
+    mypy --ignore-missing-imports -p curvepy
   only:
     - master
     - 01-pipeline-creation # TODO: remove me once the merge is done
