--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy==1.19.1
-
+numpy~=1.19.1
 matplotlib~=3.3.3
 Shapely~=1.7.1
 scipy~=1.5.4
 sympy~=1.6.2
 PyQt5~=5.15.2
+hypothesis~=6.14.0
+pytest~=6.2.4
