--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: python:latest
+image: python:3.8-buster
 
 # Change pip's cache directory to be inside the project directory since we can
 # only cache local items.
