--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,9 @@ stages:
   - test
   - deploy
 
-# libgl1 needed for PyQT5
 # libgeos-dev needed for Shapely TODO propbably remove sometime
 before_script:
-  - apt update && apt upgrade -y && apt install -y libgl1 libgeos-dev
+  - apt update && apt upgrade -y && apt install -y libgeos-dev
   - python -m venv venv && source venv/bin/activate && python --version
   - pip install --upgrade pip && pip install -r requirements.txt
   - pip install pdoc3 pytest flake8 flake8-bugbear pep8-naming flake8-builtins flake8-comprehensions
